# pubmlstdownload

./: README.md  pyproject.toml
src/pubmlstdownload/: __init__.c  pubmlst_download.c  pubmlst_download.pyx  schemes_pasteur.json  schemes_pubmlst.json
